2000-07-21  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-store.c (camel_imap_command_extended): Rewrote
	the code to check for "* %d RECENT". Still needs to be modified, but should
	no longer cause an infinite loop by detecting mis-detecting RECENT messages.

2000-07-20  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-folder.c (imap_get_summary): 
	(imap_get_message_info): Oops. Fix UID parser to allow 0 and 9 to be in
	the range of valid UID chars.

2000-07-19  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-folder.c: General cleanup working towards
	getting Actions->Expunge working correctly.

	* providers/imap/camel-imap-store.c (cammel_imap_command_extended): Added
	code to look for "* %d RECENT" and to emit the folder_changed signal if 
	there are any recent messages. Note: this is a hack and needs to be rewritten 
	badly.

2000-07-19  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-folder.c (imap_get_summary): If the folder's
	message count is not the same as the number of summaries, free the old
	summary and create a new summary.

2000-07-18  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-folder.c (camel_imap_folder_class_init): Added
	in imap_[g,s]et_message_user_flag() methods
	(imap_get_message_info): Rewrote to use the more efficient way of
	downloading summary information and also added a UID comparison so that
	if the UID requested doesn't match the UID received, it returns NULL.
	FIXME: When the mailer gets NULL when it requested message info, it
	seems that it displays a row for that message and when you try and select
	the blank row, it segfaults.

	* providers/imap/camel-imap-store.c (get_folder): Oops, this should not be 
	checking against "/", it should be checking against dir_sep.

	* providers/imap/camel-imap-folder.c (imap_parse_subfolder_line): Updated
	to trim out the leading namespace.