@@ -1,5 +1,9 @@
 2000-07-21  Jeffrey Stedfast  <fejj@helixcode.com>
 
+	* providers/imap/camel-imap-stream.c (stream_read): Updated with some of the
+	same fixes I've made to camel-imap-folder.c like recalculating message part
+	lengths.
+
 	* providers/imap/camel-imap-store.c (camel_imap_command_extended): Rewrote
 	the code to check for "* %d RECENT". Still needs to be modified, but should
 	no longer cause an infinite loop by detecting mis-detecting RECENT messages.
